# Binderbase

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  osv-scanner.toml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml
.github/: CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  branch-protection.yml  dependabot.yml  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  fuzz.yml  osv-scanner.yml  release.yml  scorecard.yml
docs/: ARCHITECTURE.md  DECISIONS.md  OPERATIONS.md  THREATMODEL.md
docs/handoff/: phase-1-catalog-persistence.md
docs/release/: 1.0.0-runbook.md  cosign-verification.md
docs/releases/: v1.0.0-rc.1.md
docs/security/: advisory-triage.md  cii-best-practices-draft.md
e2e/: catalog-import.spec.ts  tauri.spec.ts
scripts/: verify.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: csv_import_preview.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/catalog/: bulk.rs  mod.rs
src-tauri/src/catalog/bulk/: controller.rs  http.rs  mod.rs  persist.rs
src-tauri/src/collection/: csv.rs  mod.rs
src-tauri/src/commands/: catalog.rs  collection.rs  mod.rs  pricing.rs  scanning.rs  settings.rs
src-tauri/src/core/: error.rs  mod.rs  types.rs
src-tauri/src/games/: mod.rs  mtg.rs  pokemon.rs
src-tauri/src/pricing/: mod.rs
src-tauri/src/scanning/: hashing.rs  index.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: migrations.rs  mod.rs  schema_v1.sql  schema_v2.sql  schema_v3.sql
src/components/: AboutModal.tsx  CardSearch.tsx  TopNav.tsx
src/features/collection/: CollectionPage.tsx
src/features/import_export/: CatalogImportPanel.tsx  CollectionCsvPanel.tsx  ImportExportPage.tsx  ScanIndexPanel.tsx
src/features/pricing/: PricesPage.tsx
src/features/scan/: ScanPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: tauri.ts
src/styles/: global.css
src/types/: index.ts
